# nekobox

./: .ENV  .currently_following.txt.kate-swp  .gitignore  .gitmodules  .index.html.kate-swp  .srslist.json.kate-swp  .targets.txt.kate-swp  404.html  CMakeLists.txt  Dockerfile.translate  README.md  announcement_message.js  atom.xml  bash.sh  check_new_release.js  check_routeprofiles.js  docker-compose.yaml  gen-cpp  gharqad.lnk  global.ini  index.html  keys.ini  languages.txt  libcore.qpb.h  libcore_client.grpc.qpb.h  message.gpg  nekobox.desktop.in  nekobox_core  power.ps1  random  requirements.txt  robots.txt  run.ps1  search_index.en.js  sitemap.xml  source.sh  srslist.json  start.sh.in  start_sing_box.sh.in  txt.txt  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request-en.md  routing_issue.yml
.github/workflows/: .build.yml.kate-swp  build.yml  pages.yml
.kdev4/: nekobox.kdev4
cmake/: QHotkey.cmake  myproto.cmake  myproto_qt.cmake  nkr.cmake  nkr_download_srslist.cmake  nkr_security.cmake  pre_install.cmake
cmake/unix/: unix.cmake
cmake/windows/: windows.cmake
core/: .CMakeLists.txt.kate-swp  CMakeLists.txt  start_sing_box.sh.in
core/protorpc/: go.mod
core/server/: disrespect_mac_users.go  go.mod  go.sum  go_init.sh  main.go  naive.go  naive_stub.go  server.go  server_darwin.go  server_freebsd.go  server_linux.go  server_unix.go  server_windows.go  test_utils.go
core/server/internal/: bean.go  get_id.go  utils.go
core/server/internal/boxbox/: box.go
core/server/internal/boxdns/: dns_manager_windows.go  monitor_freebsd.go  monitor_stub.go  monitor_windows.go
core/server/internal/boxdns/winipcfg/: .types.go.kate-swp
core/server/internal/boxmain/: cmd_check.go  cmd_run.go  debug_linux.go
core/server/internal/data/: base.go  bbolt.go  bytes.go  filesystem.go  folder.go  json.go  uint64.go
core/server/internal/sys/: set_dns_stub.go
core/server/speedtest/: data_manager.go  request.go  server.go  speedtest.go
core/server/speedtest/transport/: tcp.go  udp.go
core/server/stub/: elevated_resolvctl.c
core/updater/: go.mod  go.sum  main.go  main_linux.go  main_unix.go  main_windows.go  updater.go  updater_linux.go  updater_unix.go  updater_windows.go
docs/: NAVBAR.md
get_started/: index.html
get_started/advanced/: index.html
get_started/configuration/: index.html
get_started/installation/: index.html
include/: js_updater.hpp
include/api/: RPC.h
include/configs/: ConfigBuilder.hpp  baseConfig.h
include/configs/common/: DialFields.h  Outbound.h  TLS.h  multiplex.h  transport.h  utils.h
include/configs/outbounds/: Chain.h  Custom.h  anyTLS.h  http.h  hysteria.h  hysteria2.h  shadowsocks.h  socks.h  ssh.h  tailscale.h  trojan.h  tuic.h  vless.h  vmess.h  wireguard.h
include/configs/proxy/: AbstractBean.hpp  AnyTLSBean.hpp  ChainBean.hpp  CustomBean.hpp  ExtraCore.h  Preset.hpp  QUICBean.hpp  SSHBean.h  ShadowSocksBean.hpp  SocksHttpBean.hpp  Tailscale.hpp  TrojanVLESSBean.hpp  V2RayStreamSettings.hpp  VMessBean.hpp  WireguardBean.h  includes.h
include/configs/sub/: GroupUpdater.hpp
include/dataStore/: DataStore.hpp  Database.hpp  Group.hpp  ProxyEntity.hpp  ResourceEntity.hpp  RouteEntity.h  Utils.hpp
include/global/: ConfigItem.hpp  Configs.hpp  Const.hpp  DataStore.hpp  GuiUtils.hpp  Utils.hpp  keyvaluerange.h
include/js/: blocking_queue.h  js_updater.h  message_queue.h  ruleset.h  version.h
include/stats/traffic/: TrafficData.hpp
include/sys/: Process.hpp  Settings.h
include/sys/windows/: MiniDump.h  WinVersion.h  eventHandler.h  guihelper.h
include/ui/: mainwindow.h  mainwindow.ui
include/ui/group/: dialog_edit_group.h  dialog_edit_group.ui  dialog_group_choose_proxy.ui
include/ui/profile/: dialog_edit_profile.ui  edit_mieru.ui  edit_shadowtls.ui
include/ui/setting/: RouteItem.h  (+8 more)
introduction/: index.html
pages/: config.toml
pages/content/: _index.md
pages/templates/: index.html
public/: announcement_message.js
res/: *.ts  EmojiFont.qrc  darkstyle.qrc  dashboard-notice.html  languages.txt  nekobox.qrc  nekobox_mac.qrc  nekobox_updater.qrc  updater.js
res/fonts/: noto.qrc  twe.qrc
res/public/: about.html  check_new_release.js
res/qss/: AMOLED.qss  Aqua.qss  Kawaii.qss  MaterialDark.qss
res/translations/: #ay_BO.ts  #fj_FJ.ts  #gn_PY.ts  #ha_NG.ts  #ig_NG.ts  #mi_NZ.ts  #qu_PE.ts  #sm_WS.ts  #to_TO.ts  af_ZA.ts  am_ET.ts  ar_SA.ts  ay_BO.ts  az_AZ.ts  be_BY.ts  bg_BG.ts  bn_BD.ts  bn_IN.ts  bo_CN.ts  bs_BA.ts  ca_ES.ts  cs_CZ.ts  cy_GB.ts  da_DK.ts  de_DE.ts  dv_MV.ts  dz_BT.ts  el_GR.ts  es_ES.ts  et_EE.ts  eu_ES.ts  fa_IR.ts  ff_SN.ts  fi_FI.ts  fj_FJ.ts  fr_FR.ts  gl_ES.ts  gn_PY.ts  gu_IN.ts  ha_NG.ts  (+74 more)
script/: .deploy_vendor.sh.kate-swp  Containerfile  Dockerfile  PKGBUILD  build_chocolatey.sh  build_docker.sh  build_go.sh  build_qt_static_windows.bat  chocolatey_push.sh  deploy_linux64.sh  deploy_macos.sh  deploy_vendor.sh  deploy_windows.sh  dummy.spec  env_deploy.sh  generate_pkgbuild.sh  nekobox.desktop.in  nekobox.spec  newpackage.spec  start.sh.in  start_sing_box.sh.in  trigger_community_projects.py  trigger_open_build_service.sh  trigger_personal_package_archive.sh  trigger_winget_pkgs.sh  txt.txt  upload_aur.sh  windows_installer.nsi
script/nekobox/: check_new_release.js  nekobox.5.9.18.nupkg  nekobox.nuspec
script/nekobox_aur/: PKGBUILD
script/nekobox_chocolatey/: nekobox.nuspec
script/nekobox_template/: ReadMe.md  nekobox.nuspec
script/nekobox_winget/: global.ini
src/: main.cpp  winsock.h
src/api/: RPC.cpp
src/configs/: ConfigBuilder.cpp  generate.cpp
src/dataStore/: ConfigItem.cpp  Configs.cpp  Database.cpp  Group.cpp  ProfileFilter.cpp  ProxyEntity.cpp  ResourceEntity.cpp  RouteEntity.cpp  Utils.cpp
src/gharqad/: elevated_launcher.cpp  libcore.cpp  main.cpp
src/global/: Configs.cpp  CountryHelper.cpp  DeviceDetailsHelper.cpp  GuiUtils.cpp  HTTPRequestHelper.cpp  Utils.cpp
src/js/: js_updater.cpp  message_queue.cpp  version.cpp
src/sys/: AutoRun.cpp  Process.cpp  Settings.cpp
src/ui/: mainwindow.cpp  mainwindow_rpc.cpp  security_addon.cpp
(+361 files in other folders)
